fix projectCard layout bug

--- a/myportfolio/src/App.css
+++ b/myportfolio/src/App.css
@@ -439,6 +439,9 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   border-radius: 30px;
   overflow: hidden;
   margin-bottom: 24px;
+  width: 100%;
+  height: 200px;
+  max-width: fit-content;
 }
 .proj-imgbx::before {
   content: "";
